/* The plural form */  altered to reflect current usage. Persons using alternate plural form are not joking when they use it. <virus#48945>

--- a/wiki/virus.wikitext
+++ b/wiki/virus.wikitext
@@ -5,7 +5,7 @@
 #A core of [[DNA]] or [[RNA]] surrounded by a [[protein]] coat that requires a living cell to reproduce &mdash; often causes disease in the host organism.
 
 ===The plural form===
-:The correct plural form is '''viruses'''. The form '''virii''' is sometimes used in a joking fashion, especially in computer senses.
+:The main plural form is '''viruses'''. An alternate form '''virii''' is sometimes used with '''computer'''.  Note the '''virii''' form is a modern phenomena of recent vintage.
 
 ===See Also===
 *[[computer virus]]
