--- a/wiki/virus.wikitext
+++ b/wiki/virus.wikitext
@@ -5,7 +5,7 @@
 #A core of [[DNA]] or [[RNA]] surrounded by a [[protein]] coat that requires a living cell to reproduce &mdash; often causes disease in the host organism.
 
 ===The plural form===
-:The main plural form is '''viruses'''. An alternate form '''virii''' is sometimes used with '''computer'''.  Note the '''virii''' form is a modern phenomena of recent vintage.
+:The main plural form is ''viruses''. An alternate form ''virii'' is sometimes used with ''computer''.  Note the ''virii'' form is a modern phenomena of recent vintage.
 
 ===See Also===
 *[[computer virus]]
