--- a/wiki/virus.wikitext
+++ b/wiki/virus.wikitext
@@ -3,21 +3,25 @@
 '''virus''' ([[viruses]])
 
 #A core of [[DNA]] or [[RNA]] surrounded by a [[protein]] coat that requires a living cell to reproduce &mdash; often causes disease in the host organism.
+#A [[computer virus]].
 
-===The plural form===
-:The main plural form is ''viruses''. An alternate form ''virii'' is sometimes used with ''computer''.  Note the ''virii'' form is a modern phenomena of recent vintage.
+====Usage note====
+The standard plural is ''viruses''.  A new plural, ''virii'' has emerged for use in the computing sense.  This is currently non-standard, and ''viruses'' is still the preferred plural in this sense.
 
-===See Also===
-*[[computer virus]]
+====Synonyms====
+*(''computing''): [[computer virus]].
+
 
 ----
-
 ==Latin==
 ===Noun===
-'''vīr·us''' ''n'' ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
+'''vīrus''' ''n'' ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
+
+====Hyphenation====
+*vīr·us
 
 #[[slime]]
 #[[poison]]
 
 ===Synonyms===
-*(2) [[venenum]]
+*(''poison'') [[venenum]]
