+computing sense; modified usage note; note also that "virii" might be a new plural, but "phenomena" is not a new singular :) <virus#48945>

--- a/wiki/virus.wikitext
+++ b/wiki/virus.wikitext
@@ -9,8 +9,7 @@
 The standard plural is ''viruses''.  A new plural, ''virii'' has emerged for use in the computing sense.  This is currently non-standard, and ''viruses'' is still the preferred plural in this sense.
 
 ====Synonyms====
-*(''computing''): [[computer virus]].
-
+*(''computing''): [[computer virus]]
 
 ----
 ==Latin==
