trimmed verbose definition; ref to usage note; syn <computer virus#50271>

--- a/wiki/computer_virus.wikitext
+++ b/wiki/computer_virus.wikitext
@@ -1,6 +1,11 @@
-===Definition===
-A program or piece of code that is loaded onto your computer without your knowledge and runs against your wishes. Most viruses can also replicate themselves. All computer viruses are manmade. A simple virus that can make a copy of itself over and over again is relatively easy to produce. Even such a simple virus is dangerous because it will quickly use all available memory and bring the system to a halt. An even more dangerous type of virus is one capable of transmitting itself across networks and bypassing security systems. Since 1987, when a virus infected ARPANET, a large network used by the Defense Department and many universities, many anti-virus programs have become available. These programs periodically check your computer system for the best-known types of viruses. Some people distinguish between general viruses and worms. A worm is a special type of virus that can replicate itself and use memory, but cannot attach itself to other programs. By C.W. Authorised by CEO VirtualSpace
+==English==
+===Noun===
+'''computer virus''' (''plural'' '''computer viruses''' ''or'' '''computer virii''' (''non-standard''))
 
-In compliance with copyright permisions (http://dtp.epsb.net/copyright.htm).
+(''computing'') A [[program]] transmitted between computers via networks, especially the Internet (or, formerly, via [[floppy disk]]s), without the knowledge or consent of the recipient, that usually causes wilful damage to data and is able to [[replicate]] itself and send copies to further computers on the network.
 
-===Download===
+====Usage note====
+''See'' [[virus]]
+
+====Synonyms====
+*[[virus]]
