--- a/wiki/computer_virus.wikitext
+++ b/wiki/computer_virus.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''computer virus''' (''plural'' '''computer viruses''' ''or'' '''computer virii''' (''non-standard''))
 
-#(''computing'') A [[program]] transmitted between computers via networks, especially the Internet (or, formerly, via [[floppy disk]]s), without the knowledge or consent of the recipient, that usually causes wilful damage to data and is able to [[replicate]] itself and send copies to further computers on the network.
+(''computing'') A [[program]] transmitted between computers via networks, especially the Internet (or, formerly, via [[floppy disk]]s), without the knowledge or consent of the recipient, that usually causes wilful damage to data and is able to [[replicate]] itself and send copies to further computers on the network.
 
 ====Usage notes====
 *The term '''computer virus''' is often used instead of just '''virus''' to specify that a virus in in the computing sense, rather than the biological sense, is being referred to.
