--- a/wiki/phishing.wikitext
+++ b/wiki/phishing.wikitext
@@ -6,8 +6,7 @@ Respelling of '''fishing''' <!--I presume -- [[User:Paul G|Paul G]] 09:36, 16 Ap
 (''[[gerund]]'')<br>
 '''phishing'''
 
-# (''computing'') The act of sending [[email]] that falsely claims to be from a legitimate organisation.  This is usualy combined with a threat that an account will close, a balance is due, or information is missing from their account.  It will request a recipient to supply confidential information, such as bank account details, [[PIN]]s or [[password]]s; these details are then used by the owners of the website to conduct [[fraud]].
-
+# (''computing'') The act of sending [[email]] that falsely claims to be from a legitimate organisation.  This is usually combined with a threat; for example, an account will close, a balance is due, or information is missing from an account.  The email will ask the recipient to supply confidential information, such as bank account details, [[PIN]]s or [[password]]s; these details are then used by the owners of the website to conduct [[fraud]].
 
 ===Adjective===
 # (FISH.ing) pp. Creating a replica of an existing Web page to fool a user into submitting personal, financial, or password data. 
