def (modified from Wikipedia article) <selfish gene#66269>

--- a/wiki/selfish_gene.wikitext
+++ b/wiki/selfish_gene.wikitext
@@ -1,1 +1,11 @@
-..unsure as to whether or not such a gene exists.
+==English==
+===Etymology===
+Coined by [[w:Richard Dawkins|Richard Dawkins]] in his book ''The Selfish Gene''
+
+===Noun===
+'''the [[selfish]] [[gene]]'''
+
+#The concept of viewing genes as if they were the primary drivers and [[beneficiary|beneficiaries]] of the [[evolutionary]] process.
+
+===See also===
+*[[w:The Selfish Gene|Wikipedia article on ''The Selfish Gene'']]
