--- a/wiki/toxin.wikitext
+++ b/wiki/toxin.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Noun===
 '''toxin'''
 
-# toxic substance.
+# A [[toxic]] or [[poisonous]] substance.
 
 ====Related terms====
 *[[toxic]]
